crates/agentprof-cli/tests/snapshots/cli__analyze_html__tool_and_skill_same_turn.snap
---
source: crates/agentprof-cli/tests/cli.rs
assertion_line: 475
expression: html
---
<!DOCTYPE html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>agentprof report — 00000000</title>
<style>* { box-sizing: border-box; }
body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif; max-width: 1200px; margin: 1rem auto; padding: 0 1rem; color: #111827; }
header { border-bottom: 1px solid #e5e7eb; padding-bottom: 0.5rem; margin-bottom: 1rem; }
header h1 { margin: 0 0 0.25rem 0; font-size: 1.5rem; }
header .meta { color: #6b7280; font-size: 0.9rem; }
section { margin-bottom: 1.5rem; }
section h2 { font-size: 1.15rem; border-bottom: 1px solid #e5e7eb; padding-bottom: 0.25rem; }
#flamegraph { overflow-x: auto; }
#flamegraph svg { display: block; }
table { width: 100%; border-collapse: collapse; font-size: 0.9rem; }
th, td { border-bottom: 1px solid #e5e7eb; padding: 0.35rem 0.5rem; text-align: left; }
th { background: #f9fafb; font-weight: 600; }
td.num { text-align: right; font-variant-numeric: tabular-nums; }
.warning-line { color: #92400e; background: #fef3c7; padding: 0.25rem 0.5rem; border-radius: 4px; margin: 0.25rem 0; font-family: ui-monospace, SFMono-Regular, Menlo, monospace; font-size: 0.85rem; }
@media print {
  body { max-width: none; }
  #flamegraph { page-break-after: always; }
  table { font-size: 9pt; }
  th { background: white !important; }
}
.warn-row { background: #fef3c7; }
.warn-row td { color: #92400e; }
</style>
</head>
<body>
<header>
<h1>agentprof report</h1>
<div class="meta">
Session: <code>00000000</code>
&middot; Agent: copilot
&middot; Model: gpt-5-mini
<br>
Started: 2026-06-01 10:00:00 UTC
&middot; Duration: 8.0 s
&middot; Turns: 2
&middot; Tools: 2
&middot; Hooks: 0
&middot; Output tokens: 25
</div>
</header>


<section id="flamegraph">
<h2>Wall-clock flamegraph</h2>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 250" width="100%" preserveAspectRatio="xMidYMid meet" font-family="sans-serif" font-size="12"><g><rect x="0" y="0" width="1000" height="50" fill="#6b7280" stroke="white" stroke-width="0.5"><title>session (18000 ms)</title></rect><text x="4" y="32" fill="white" pointer-events="none">session</text></g><g><rect x="111" y="50" width="111" height="50" fill="#9ca3af" stroke="white" stroke-width="0.5"><title>turn-00000000-0000-0000-0000-00000000c102 (2000 ms)</title></rect><text x="115" y="82" fill="white" pointer-events="none">turn-00000000-0</text></g><g><rect x="666" y="50" width="333" height="50" fill="#9ca3af" stroke="white" stroke-width="0.5"><title>turn-00000000-0000-0000-0000-00000000c112 (6000 ms)</title></rect><text x="670" y="82" fill="white" pointer-events="none">turn-00000000-0000-0000-0000-00000000c112</text></g><g><rect x="777" y="100" width="55" height="50" fill="#3b82f6" stroke="white" stroke-width="0.5"><title>bash</title></rect><text x="781" y="132" fill="white" pointer-events="none">bash</text></g><g><rect x="888" y="100" width="55" height="50" fill="#10b981" stroke="white" stroke-width="0.5"><title>skill:code-reviewer:run</title></rect><text x="892" y="132" fill="white" pointer-events="none">skill:c</text></g></svg>
</section>



<section id="turns">
<h2>Turn Summary</h2>
<table>
<thead><tr><th>Turn</th><th>Started</th><th>Duration</th><th>Status</th><th>Model</th><th>Mode</th><th class="num">Out tokens</th></tr></thead>
<tbody>

<tr>
<td>00000000-0000-0000-0000-00000000c102</td>
<td>2026-06-01T10:00:02+00:00</td>
<td>2000 ms</td>
<td>Completed</td>
<td>gpt-5-mini</td>
<td>Interactive</td>
<td class="num">5</td>
</tr>

<tr>
<td>00000000-0000-0000-0000-00000000c112</td>
<td>2026-06-01T10:00:12+00:00</td>
<td>6000 ms</td>
<td>Completed</td>
<td>gpt-5-mini</td>
<td>Interactive</td>
<td class="num">20</td>
</tr>

</tbody>
</table>
</section>



<section id="tools">
<h2>Tool Rank</h2>
<table>
<thead><tr><th>Tool</th><th>Source</th><th class="num">Calls</th><th class="num">Failures</th><th class="num">Total duration</th><th class="num">p50</th><th class="num">p95</th></tr></thead>
<tbody>

<tr>
<td>bash</td>
<td>builtin</td>
<td class="num">1</td>
<td class="num">0</td>
<td class="num">1000 ms</td>
<td class="num">1000 ms</td>
<td class="num">1000 ms</td>
</tr>

<tr>
<td>skill__code-reviewer__run</td>
<td>skill:code-reviewer</td>
<td class="num">1</td>
<td class="num">0</td>
<td class="num">1000 ms</td>
<td class="num">1000 ms</td>
<td class="num">1000 ms</td>
</tr>

</tbody>
</table>
</section>



<section id="hooks">
<h2>Hook Rank</h2>
<table>
<thead><tr><th>Hook</th><th class="num">Calls</th><th class="num">Failures</th><th class="num">Total duration</th></tr></thead>
<tbody>

</tbody>
</table>
</section>




<footer style="margin-top: 2rem; color: #9ca3af; font-size: 0.8rem;">Generated by agentprof v0.0.0 on <DATE></footer>
</body>
</html>
